<resources>

    <string name="app_name">M-Watch</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="headlines">Update Headlines</string>
    <string name="weather">Update Weather</string>
    <string name="save">Save</string>
    <string name="title_activity_weather">Weather</string>
    <string name="weather_textview">WEATHER</string>
    <string name="ascii">ASCII Characters for Debugging</string>
    <string name="title_activity_headlines">USA Today Headlines</string>
    <string name="headline_textview">HEADLINES</string>
    <string name="headlines_hint">Number of headlines</string>
    <string name="weather_hint">Zipcode</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="none_paired">No Device Paired</string>
    <string name="scanning">Scanning….</string>
    <string name="none_found">No Device Found</string>
    <string name="select_device">Select Device</string>
    <string name="title_activity_bt">BTActivity</string>
    <string name="get_time">View Current Time</string>
    <string name="title_activity_time">Current Time</string>
    <string name="time_textview">CURRENT TIME</string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="music">Music</string>
    <string name="headline_title">Headline String Sent to M-Watch</string>
    <string name="weather_send_to_screen">Weather String Sent to M-Watch</string>
    <string name="time_send_to_screen">Time Sent to M-Watch</string>

</resources>