<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/zip_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/weather_hint"
        android:inputType="number"
        android:maxLength="5" />

    <AnalogClock
        android:id="@+id/analogClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/get_headlines"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

    <Button
        android:id="@+id/get_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/zip_code"
        android:layout_marginRight="29dp"
        android:text="@string/weather" />

    <Button
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/analogClock1"
        android:layout_centerHorizontal="true"
        android:text="@string/get_time" />

    <Button
        android:id="@+id/save_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/zip_code"
        android:layout_below="@+id/zip_code"
        android:text="@string/save" />

    <Button
        android:id="@+id/get_headlines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/get_weather"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/headlines" />

    <Button
        android:id="@+id/start_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/get_weather"
        android:text="@string/music" />

</RelativeLayout>