<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeActivity" >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" >
    
    <TextView
        android:id="@+id/time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:text="@string/time_send_to_screen" />
    
    <TextView
        android:id="@+id/time_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/time_title"
        android:text="@string/time_textview" />

    <TextView
        android:id="@+id/ACSII_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_string"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="23dp"
        android:text="@string/ascii" />
    
    <TextView
        android:id="@+id/time_ascii_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ACSII_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/ascii" />

    

	</RelativeLayout>
    </ScrollView>
</RelativeLayout>